# verb_games_support_bot

./: .env.example  .gitignore  README.md  create_intents.py  dialogflow_processing.py  main.py  pyproject.toml  requirements.txt  telegram_bot.py  vk_bot.py
